syntax = "proto3";
package actor;
option csharp_namespace = "ClusterExperimentInMemory.Messages";

message HelloRequest {
    
}

message HelloResponse {
    
}